# sound-barrier-query

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: .env.example  国内声屏障标准汇总表.xlsx  国外及香港声屏障标准汇总表本.xlsx
docs/superpowers/plans/: 2026-06-04-sound-barrier-standard-query-system.md
src/sound_barrier_query/: __init__.py  aliases.py  assistant.py  config.py  llm.py  models.py  search.py  web.py  xlsx_loader.py
src/sound_barrier_query/static/: app.js  index.html  styles.css
tests/: test_aliases.py  test_assistant.py  test_llm.py  test_models.py  test_query_engine.py  test_search.py  test_static_ui.py  test_web.py  test_xlsx_loader.py
